add google auth

--- a/EventCreator/appsettings.json
+++ b/EventCreator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared",
+    "DefaultConnection": "DataSource=./Data/app.db",
     "EventCreatorIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=EventCreator;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
